Multiplayer, and therefore the entire coursework is now finished. I have also completed an extension adding settings which let you toggle music and sound. Now the code could do with cleaning up and making more presentable, and adding comments explaining things. Furthermore there are a couple bugs which need fixing, such as ESC not working in the scores scene, sometimes if you place pieces too quickly they don't render until highlighted, and also after hosting a multiplayer game, multiplayer breaks until the game is relaunched.

--- a/src/main/resources/style/game.css
+++ b/src/main/resources/style/game.css
@@ -183,6 +183,25 @@
       -fx-effect: dropshadow(gaussian, black, 1, 1.0, 1, 1);
       -fx-text-alignment: center;
       -fx-alignment: center;
+      -fx-strikethrough: true;
+}
+
+
+.headingDEAD {
+      -fx-text-fill: white;
+      -fx-font-family: 'Orbitron';
+      -fx-font-size: 26px;
+      -fx-font-weight: 900;
+      -fx-border-color: transparent;
+      -fx-stroke: black;
+      -fx-effect: dropshadow(gaussian, black, 1, 1.0, 1, 1);
+      -fx-text-alignment: center;
+      -fx-alignment: center;
+
+}
+
+.headingDEAD .text {
+    -fx-strikethrough: true;
 }
 
 .pieceDisplays {
@@ -379,6 +398,12 @@ TextField {
     -fx-text-fill: white;
     -fx-font-weight: bold;
     -fx-background-color:transparent;
+    -fx-text-alignment: center;
+     -fx-alignment: center;
+}
+
+.inGameChatBox{
+
 }
 
 .list-view .scroll-bar {
